# local-data-api

./: .coveragerc  .travis.yml  404.html  Dockerfile  FUNDING.yml  README.md  codecov.yml  docker-compose-mysql.yml  docker-compose-postgres.yml  docker-compose.override-ci.yml  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  requriements-test.txt  requriements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml  Publish.yml  ci.yml  codeql.yml  docs.yaml  docs.yml  publish.yml
kotlin/local-data-api/: .gitignore  Dockerfile  build.gradle  gradle.properties  settings.gradle
kotlin/local-data-api/resources/: application.conf
kotlin/local-data-api/src/: Application.kt  ConnectionManager.kt  Exceptions.kt  LocalDataApi.kt  Models.kt  Resource.kt  ResourceManager.kt  SecretManager.kt  models.kt
kotlin/local-data-api/test/: ApplicationTest.kt  ConnectionManagerTest.kt  LocalDataApiTest.kt  ModelsTest.kt  ResourceManagerTest.kt  SecretManagerTest.kt
local_data_api/: __init__.py  exceptions.py  main.py  models.py  secret_manager.py  settings.py
local_data_api/database/: database.py  mysql.py
local_data_api/resources/: __init__.py  mysql.py  postgres.py  resource.py  sqlite.py
local_data_api/resources/jdbc/: __init__.py  mysql.py  postgres.py
scripts/: fix_format.sh  format.sh  integration-test.sh  lint.sh  push-image.sh  test.sh
search/: search_index.json
tests/: test_exceptions.py  test_functions.py  test_main.py  test_models.py  test_secret.py  test_secret_manager.py  test_settings.py
tests/test_database/: test_resource.py
tests/test_resource/: test_mysql.py  test_postgres.py  test_resource.py  test_secret.py
tests/test_resource/jdbc/: test_jdbc.py
tests/test_resource/test_jdbc/: test_jdbc.py  test_mysql.py  test_postgres.py
(+14 files in other folders)
