[metadata]
name = local-data-api
description = Local Data API
url = https://github.com/koxudaxi/local-data-api
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.8.0
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    pydantic == 1.0
    email-validator == 1.0.5
    fastapi == 0.45.0
    SQLAlchemy == 1.3.11
    PyMySQL == 0.9.3
    JPype1 == 0.7.5
    JayDeBeApi == 1.2.3
    psycopg2 == 2.8.5

tests_require =
    pytest>=4.6
    pytest-benchmark
    pytest-cov
    pytest-mock
    mypy
    black
    isort

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[aliases]
test = pytest
